# TurboScan

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
scripts/: check.bat  setup.bat  test.bat
src/turboscan/: __init__.py  __main__.py
src/turboscan/analysis/: __init__.py  function_analyzer.py
src/turboscan/ast_transform/: __init__.py  mutation_detector.py  parallelizer.py
src/turboscan/auditor/: __init__.py  auditor.py
src/turboscan/cache/: __init__.py  bloom_filter.py  hyper_cache.py
src/turboscan/execution/: __init__.py  hyper_boost.py  utils.py
src/turboscan/executor/: __init__.py  executor.py
src/turboscan/gpu/: __init__.py  accelerator.py
src/turboscan/hardware/: __init__.py  config.py
src/turboscan/indexing/: __init__.py  indexer.py  types.py
src/turboscan/io/: __init__.py  file_reader.py
src/turboscan/jit/: __init__.py  injector.py
src/turboscan/registry/: __init__.py  registry.py
src/turboscan/resolver/: __init__.py  resolver.py
src/turboscan/validator/: __init__.py  validator.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_main.py
tests/unit/analysis/: test_analyzer.py
tests/unit/ast_transform/: test_mutation.py  test_parallelizer.py
tests/unit/auditor/: test_auditor.py
tests/unit/cache/: test_cache.py
tests/unit/execution/: test_boost_methods.py  test_serialization.py
tests/unit/executor/: test_executor.py
tests/unit/gpu/: test_accelerator.py
tests/unit/hardware/: test_config.py
tests/unit/indexing/: test_indexer.py
tests/unit/io/: test_file_reader.py
tests/unit/jit/: test_jit_logic.py
tests/unit/registry/: test_registry.py
tests/unit/resolver/: test_resolver.py
tests/unit/validator/: test_validator.py
