[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turboscan"
version = "0.1.0"
description = "TurboScan is a massively parallelized, GPU-accelerated, JIT-optimized execution framework that uses ALL available system resources for lightning-fast Python execution"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Yaron Koresh"},
]
dependencies = [
    # Core parallel execution
    "ray[default]>=2.9.0",

    # GPU acceleration
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # JIT compilation
    "numba>=0.58.0",
    "llvmlite>=0.41.0",

    # Vectorized operations
    "numpy>=1.24.0",

    # Progress display
    "rich>=13.0.0",

    # Persistent caching
    "diskcache>=5.6.0",

    # System monitoring
    "psutil>=5.9.0",

    # Enhanced serialization
    "cloudpickle>=3.0.0,<4.0.0",
    "loky>=3.0.0,<4.0.0",

    # Cython compilation support
    "cython>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.90.0",
    "ruff",
    "poethepoet",
    "pre-commit",
    "build"
]

[project.urls]
Homepage = "https://github.com/YaronKoresh/TurboScan"
Repository = "https://github.com/YaronKoresh/TurboScan"
Issues = "https://github.com/YaronKoresh/TurboScan/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- RUFF CONFIGURATION ---
[tool.ruff]
target-version = "py38"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = [
    "E501",
    "E402",
    "F401"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = ["E731"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- POE TASKS ---
[tool.poe.tasks]
# Quality Assurance
test = "pytest tests/"
compile = { cmd = "python -m compileall -q ." }
precommit = { cmd = "pre-commit run --all-files", env = { SKIP = "no-commit-to-branch" } }
clean = { cmd = '''python -Bc "
import pathlib, shutil;
targets = {
        'directories': {
            '__pycache__', '.pytest_cache', '.ruff_cache', '.mypy_cache',
            '.tox', '.nox', '.cache', '.ipynb_checkpoints', 'htmlcov',
            'build', 'dist', '.eggs', '*.egg-info', '.coverage.reports'
        },
        'files': {
            '.coverage', '.coverage.*', '.sqlite', 'nosetests.xml',
            'coverage.xml', '*.pyc', '*.pyo', '*.pyd', '.DS_Store'
        }
};
for p in pathlib.Path('.').rglob('*'):
        if p.name in targets['directories'] or any(p.match(pat) for pat in targets['directories']):
            if p.is_dir(): shutil.rmtree(p, ignore_errors=True)
        elif p.name in targets['files'] or any(p.match(pat) for pat in targets['files']):
            if p.is_file(): p.unlink(missing_ok=True)
"''' }
check = ["clean", "compile", "precommit", "test", "clean"]

# Build Pipeline
build = { cmd = "python -m build" }

# Setup Task
hook = { cmd = "pre-commit install" }
